# api-dados-rio

./: .flake8  .gitignore  .kubernetes.yaml  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  manage.py  nginx.conf  pyproject.toml  pytest.ini  start-server.sh
.github/workflows/: cd.yaml  lint.yaml  tests.yaml
api_dados_rio/: asgi.py  urls.py  wsgi.py
api_dados_rio/custom/: logging_filters.py  routers.py  views.py
api_dados_rio/settings/: __init__.py  base.py  dev.py  prod.py
api_dados_rio/templates/: index.html
api_dados_rio/v1/: __init__.py  urls.py
api_dados_rio/v1/comando/: apps.py  urls.py  views.py
api_dados_rio/v1/cor/: urls.py
api_dados_rio/v1/cor/comando/: apps.py  urls.py  views.py
api_dados_rio/v2/: urls.py
api_dados_rio/v2/adm_cor_comando/: apps.py  urls.py  views.py
api_dados_rio/v2/clima_alagamento/: apps.py  urls.py  utils.py  views.py
api_dados_rio/v2/clima_pluviometro/: apps.py  urls.py  views.py
api_dados_rio/v2/clima_radar/: apps.py  urls.py  views.py
api_dados_rio/v2/vision_ai/: apps.py  urls.py
scripts/: test.py
tests/: test_sanity.py
